--- a/demo.html
+++ b/demo.html
@@ -35,7 +35,7 @@ jQuery(function(){
 		<h2>Demo</h2>
 		<div class="demo-section">
 
-			<form method="post">
+			<form method="get">
 				<div class="tool">
 					<div class="tool-inner">
 						<p>SUBMIT してもスクロール位置が維持されます。</p>
