--- a/demo.html
+++ b/demo.html
@@ -39,6 +39,7 @@ jQuery(function(){
 				<div class="tool">
 					<div class="tool-inner">
 						<p>SUBMIT してもスクロール位置が維持されます。</p>
+						<input type="text" name="data"/>
 						<input type="submit" value="SUBMIT"/>
 					</div>
 				</div>
